--- a/public/html/employeeInfo.html
+++ b/public/html/employeeInfo.html
@@ -20,9 +20,7 @@
 				 	<tr>
 						<th>序号</th>
 						<th>公司logo</th>
-						<th>职位名称</th>
 						<th>公司名称</th>
-						<th>工作经验</th>
 						<th>职业类型</th>
 						<th>工作地点</th>
 						<th>职位薪资</th>
@@ -30,53 +28,33 @@
 				 	</tr>					
 				</thead>
 				<tbody>
-					<tr>
-						<td><input type="text" name=""  value="" /><span class="active">88</span></td>
-						<td><input type="text" name="" value=""/><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td class="modify-btn"><div id="modifySpan">修改</div><div id="deleteSpan">删除</div></td>
-					</tr>
-					<tr>
-						<td><input type="text" name="" value="" /><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td><input type="text" name="" value=""/><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td class="modify-btn"><div id="modifySpan">修改</div><div id="deleteSpan">删除</div></td>
-					</tr>
-					<tr>
-						<td><input type="text" name=""  value="" /><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td><input type="text" name="" value=""/><span class="active">88</span></td>
-						<td><input type="text" name=""  value=""/><span class="active">88</span></td>
-						<td class="modify-btn"><div id="modifySpan">修改</div><div id="deleteSpan">删除</div></td>
-					</tr>
+
 				</tbody>
 			</table>
+			
+					<script type="text/html" id="list-template">
+						{{each list item index}}
+							<tr>
+								<td>{{index+1}}</td>
+								<td><img src="{{item.logo}}" style="width: 60px; height: 30px;"/></td>
+								<td>{{item.company}}</td>
+								<td>{{item.position}}</td>
+								<td>{{item.address}}</td>
+								<td>{{item.salary}}</td>
+								<td class="modify-btn"><div class="modifySpan">修改</div><div id="deleteSpan">删除</div></td>
+							</tr>
+						{{/each}}
+					</script>
+
 			<!--分页栏-->
 				<nav aria-label="Page navigation">
 				  <ul class="pagination">
-				    <li>
+				    <li id="clearLi">
 				      <a href="#" aria-label="Previous">
 				        <span aria-hidden="true">&laquo;</span>
 				      </a>
 				    </li>
-				    <li><a href="#">1</a></li>
-				    <li><a href="#">2</a></li>
-				    <li><a href="#">3</a></li>
-				    <li>
+				    <li id="insertLi">
 				      <a href="#" aria-label="Next">
 				        <span aria-hidden="true">&raquo;</span>
 				      </a>
@@ -111,10 +89,6 @@
 						    <input type="password" class="form-control" id="companyName" placeholder="Password">
 						  </div>
 						  <div class="form-group">
-						    <label for="workingExperience">工作经验</label>
-						    <input type="password" class="form-control" id="workingExperience" placeholder="Password">
-						  </div>
-						  <div class="form-group">
 						    <label for="typeofJob">职务类型</label>
 						    <input type="password" class="form-control" id="typeofJob" placeholder="Password">
 						  </div>
@@ -130,7 +104,7 @@
 			        
 			      </div>
 			      <div class="modal-footer">
-			        <button type="button" class="btn btn-default" data-dismiss="modal">确认修改</button>
+			        <button type="button" class="btn btn-default" data-dismiss="modal" >确认修改</button>
 			        <button type="button" class="btn btn-primary">取消</button>
 			      </div>
 			    </div>
